# modular-rag-pipeline

./: .gitignore  .sample.env  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
data/bank_info/: canteen_data.csv  canteen_data.db  coffee_machine_data.csv  office_entry_data.csv  printer_data.txt
data/catbank/: catbank.txt  questions_answers.yaml
scripts/: canteen_data.csv  create_canteen_db.py
src/: models.py  pipeline.py
src/components/: base_component.py
src/components/answer_generators/: base_answer_generator.py  lc_answer_generator.py
src/components/chunkers/: base_chunker.py  fixed_size_chunker.py  lc_semantic_chunker.py
src/components/document_loaders/: base_document_loader.py  csv_loader.py  multi_loader.py  text_loader.py
src/components/evaluators/: base_evaluator.py  lc_llm_judge.py  no_evaluator.py
src/components/prompt_builders/: base_prompt_builder.py  simple_prompt_builder.py
src/components/query_transformers/: base_query_transformer.py  multi_query.py  single_query.py
src/components/relational_db_retrievers/: base_relational_db_retriever.py  mock_relational_db_retriever.py  sqlite_retriever.py
src/components/retrievers/: base_retriever.py  lc_chroma_retriever.py
src/components/routers/: base_router.py  simple_router.py
src/components/vector_stores/: base_vector_store.py  lc_chroma_store.py
src/resources/: embedding_models.py  llms.py  prompts.py
test/: test_pipeline.py
test/configs/: config.yaml  config_embed_large.yaml  config_embed_small.yaml
ui/: app.py  component_config.py  controller.py  utilities.py
(+2 files in other folders)
